fix invisible msg container from intercepting lfo clicks

--- a/public/src/style.css
+++ b/public/src/style.css
@@ -132,7 +132,7 @@ ul {
 }
 
 .above {
-  z-index: 100;
+  z-index: 1;
 }
 
 .error {
